# C-Interpreter

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.sh
src/: CMakeLists.txt  interpreter.cpp  interpreter.h  main.cpp  virtual-machine.cpp  virtual-machine.h
test/: CMakeLists.txt  constants.h  interpreter-tests.cpp  runner.cpp
test/fixtures/: basic.cpp
